# samsung-ac-protocol

./: LICENSE  README.md  pyproject.toml
samsung_ac_decoder/: __init__.py
samsung_ac_ir_timer/: __init__.py
samsung_ac_protocol/: __init__.py  checksum.py  decoder.py  encoder.py  models.py
tests/: test_decoder.py  test_protocol.py
