[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "samsung-ac-decoder"
version = "0.1.1"
description = "A decoder for Samsung Air Conditioner dual-timer IR payloads"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "iCodePoet", email = "icodepoet@example.com" }
]

[project.urls]
Homepage = "https://github.com/iCodePoet/samsung-ac-decoder"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
