[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "samsung-ac-protocol"
version = "0.1.0"
description = "A lightweight, zero-dependency codec for Samsung AC IR payloads"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "iCodePoet", email = "icodepoet@example.com" }
]

[project.urls]
Homepage = "https://github.com/iCodePoet/samsung-ac-decoder"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
